--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -47,6 +47,24 @@ input[type='submit'].full-width {
   margin: 1em 0;
 }
 
+.mx-5 {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.my-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-end {
+  justify-content: flex-end;
+}
+
 .Application {
   margin: auto;
   max-width: 400px;
